assets/style/popup.css
body {
    background-image: url('../../pictures/playi.png');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    text-align: center;
    backdrop-filter: blur(5px); /* Blur effect */
}
.modal {
    background-color: rgba(0, 0, 0, 0.5);
    display: none; /* Hidden by default */
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

.modal-content {
    font-family: 'fredoka one', cursive;
    font-size: 20px;
    background-color: rgb(16, 82, 16);
    margin: 15% auto;
    padding: 20px;
    border-radius: 5px;
    width: 50%;
    text-align: center;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    letter-spacing: 0.2em; 
}
p {
    color:#fff;
}
ul{
    color:#fff;
}
li{
    color: #fff;
}
h2{
    color: #fff;
}

 .close-btn {
  position: absolute;
  right: 15px;
  top: 10px;
  font-size: 30px; /* Larger size */
  font-weight: bold; /* Bold for better visibility */
  color: #fff; /* Darker color */
  background: #e009094f; /* Light background */
  padding: 5px 12px;
  border-radius: 50%; /* Circle shape */
  cursor: pointer;
  transition: 0.3s ease;
}

.close-btn:hover {
  background: red;
  color: white;
  transform: scale(1.1); /* Slight enlargement on hover */
}

